# AI-Agent-OS-Platform

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: package.json  tsconfig.json
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/api/src/common/: common.module.ts  database.service.ts
apps/api/src/modules/agents/: agents.controller.ts  agents.module.ts  agents.service.ts
apps/api/src/modules/billing/: billing.module.ts
apps/api/src/modules/channels/: channels.module.ts
apps/api/src/modules/conversations/: conversations.controller.ts  (+2 more)
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/playground/: page.tsx
db/: migrate.mjs
db/migrations/: 0001_init.sql  0002_auth_bootstrap.sql
db/tests/: rls_isolation.sql
docs/: 01-executive-summary.md  02-system-architecture.md  03-multi-tenancy-security.md  04-agent-lifecycle.md  05-tech-stack.md  06-channels-gtm.md  07-roadmap.md  08-differentiators.md  09-product-requirements.md  10-pricing-unit-economics.md  11-evaluation-framework.md  12-observability-monitoring.md  13-architecture-review.md  14-sprint-0-plan.md
infra/terraform/: README.md
ops/: verify-local.ps1
ops/runbooks/: README.md
services/ai/: pyproject.toml
services/ai/app/: config.py  db.py  main.py
services/ai/app/gateway/: llm_gateway.py
services/ai/app/ingestion/: pipeline.py  worker.py
services/ai/app/rag/: answer.py  vector_store.py
test-fixtures/: make-electronics-faq.py
(+7 files in other folders)
