[project]
name = "agentos-ai"
version = "0.0.1"
description = "AgentOS AI Service — RAG engine, LLM gateway, ingestion (docs/02 §2)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "anthropic>=0.45",
    "asyncpg>=0.30",
    "boto3>=1.35",
    "pypdf>=5.1",        # S0-07 basic parsing; layout-aware parser পরের sprint (F3.2)
    "httpx>=0.28",
    "pgvector>=0.3",     # asyncpg codec + Vector type (S0-07)
    "bullmq>=2.10",      # Core API-র BullMQ queue-র Python consumer (S0-07)
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.ruff]
# Bangla comment + English term মিলে 88 সংকীর্ণ — codebase-এর প্রকৃত style 100
line-length = 100

[tool.ruff.lint]
# A6: gateway-bypass rule — app.gateway-র বাইরে provider SDK import নিষেধ (banned-api নিচে)
select = ["E", "F", "I", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"anthropic".msg = "Provider SDK সরাসরি নয় — app.gateway.llm_gateway ব্যবহার করুন (docs/13 A6)"
